--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="header">
     <div class="conteiner">
       <div class="header__top">
-        <a href="#" class="logo"><img class='logo__img' src="../img/logo.png" alt=""></a>
+        <a href="#" class="logo"><img class='logo__img' src="img/logo.png" alt="logo"></a>
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__item"><a href="" class="menu__linck">О нас</a></li>
@@ -32,7 +32,7 @@
             <li class="menu__item"><a href="" class="menu__linck">Оптовикам</a></li>
           </ul>
         </nav>
-        <a href="tel:380501111111" class="phone"><img src="../img/phone.svg" alt="" class="phone"></a>
+        <a href="tel:380501111111" class="phone"><img src="img/phone.svg" alt="" class="phone"></a>
       </div>
     </div>
     <div class="header__content">
@@ -580,7 +580,7 @@
             <li class="menu__item"><a href="" class="menu__linck">Оптовикам</a></li>
           </ul>
         </nav>
-        <a href="#" class="logo"><img class='logo__img' src="../img/logo.png"></a>
+        <a href="#" class="logo"><img class='logo__img' src="img/logo.png"></a>
       </div>
     </div>
   </footer>
